fix #2 文字コードとstrictの設定を追加

--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,4 +1,25 @@
 ---
+- name: conf_innodb_strict_mode
+  lineinfile:
+    path: /etc/my.cnf.d/mariadb-server.cnf
+    regexp: '^innodb_strict_mode'
+    insertafter: '^[mysqld]'
+    line: innodb_strict_mode={{ innodb_strict_mode }}
+
+- name: conf_character_server
+  lineinfile:
+    path: /etc/my.cnf.d/mariadb-server.cnf
+    regexp: '^character-set-server'
+    insertafter: '^[mysqld]'
+    line: character-set-server={{ character_set_server }}
+
+- name: conf_character_client
+  lineinfile:
+    path: /etc/my.cnf.d/client.cnf
+    regexp: '^default-character-set'
+    insertafter: '^[client]'
+    line: default-character-set={{ default_character_set }}
+
 - name: restart_mariadb
   become: yes
   systemd:
