--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,5 +1,6 @@
 ---
 - name: conf_innodb_strict_mode
+  become: yes
   lineinfile:
     path: /etc/my.cnf.d/server.cnf
     regexp: '^innodb_strict_mode'
@@ -7,6 +8,7 @@
     line: innodb_strict_mode={{ innodb_strict_mode }}
 
 - name: conf_character_server
+  become: yes
   lineinfile:
     path: /etc/my.cnf.d/server.cnf
     regexp: '^character-set-server'
@@ -14,6 +16,7 @@
     line: character-set-server={{ character_set_server }}
 
 - name: conf_character_client
+  become: yes
   lineinfile:
     path: /etc/my.cnf.d/client.cnf
     regexp: '^default-character-set'
